[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Textures/UI/Minimap/Minimap_Frame.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ItemDescription.gd" type="Script" id=2]
[ext_resource path="res://RobotoSlab-VariableFont_wght1.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/Textures/UI/Buttons/CancelButton_idle.png" type="Texture" id=4]
[ext_resource path="res://src/Textures/UI/Buttons/CancelButton_pressed.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[node name="ItemDescriptionWindow" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
texture = ExtResource( 1 )
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="NinePatchRect/MarginContainer"]
self_modulate = Color( 1, 1, 1, 0.866667 )
show_behind_parent = true
margin_left = 10.0
margin_top = 10.0
margin_right = 974.0
margin_bottom = 550.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="NinePatchRect/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
split_offset = 100
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/MarginContainer/Panel/HSplitContainer"]
margin_right = 582.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="DescriptionLabel" type="RichTextLabel" parent="NinePatchRect/MarginContainer/Panel/HSplitContainer/MarginContainer2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 572.0
margin_bottom = 530.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/MarginContainer/Panel/HSplitContainer"]
margin_left = 582.0
margin_right = 964.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ItemPicture" type="TextureRect" parent="NinePatchRect/MarginContainer/Panel/HSplitContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 362.0
margin_bottom = 520.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="CloseButton" type="TextureButton" parent="NinePatchRect/MarginContainer/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -70.0
margin_top = 19.0
margin_right = -10.0
margin_bottom = 79.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="NinePatchRect/MarginContainer/Panel/CloseButton" to="." method="_on_CloseButton_button_up"]
